--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>GlaceYT</title>
+    <title>Worstik</title>
     <style>
         body {
-            background-image: url('https://cdn.discordapp.com/attachments/1264134884432285766/1270352605154902151/GlaceYT.gif?ex=66b40c4f&is=66b2bacf&hm=c1544d1e4583754696cbaab1e74d209159e5b243adaa4660eebc2629810715c6&');
+            background-image: url('https://cdn.discordapp.com/attachments/659120271034155042/1285728582957662328/giphy.gif?ex=66eb538d&is=66ea020d&hm=914fc0984aa8708efb416a179e93600e7b4a07787d57589ccb251156aa857b47&');
             background-size: cover;
             background-repeat: no-repeat;
             margin: 0;
